@@ -1,4 +1,5 @@
 # To be released:
+- Fix FirebaseMessageParserImpl.verifyPayload() logic
 
 # 1.16.1 - Wed 25 Sep 2020
 - Remove `User` field on `ChannelUpdatedEvent`
